<?xml version="1.0"?>
<package format="2">
  <name>cartographer_hokuyo3d</name>
  <version>0.0.0</version>
  <description>The cartographer_hokuyo3d package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>hokuyo3d</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>imu_tools</exec_depend>

  <export>
  </export>
</package>
